--- a/project 1/index.html
+++ b/project 1/index.html
@@ -14,25 +14,25 @@
         -->
         <form id="form" class="form">
             <h2>Sign Up</h2>
-            <div class="form-contol">
+            <div class="form-control">
                 <label for="username">Username</label>
                 <input type="text" id="username" placeholder="Enter Username">
                 <small>Error Message</small>
             </div>
 
-            <div class="form-contol">
+            <div class="form-control">
                 <label for="email">Email</label>
                 <input type="text" id="email" placeholder="Enter email">
                 <small>Error Message</small>
             </div>
 
-            <div class="form-contol">
+            <div class="form-control">
                 <label for="password">Password</label>
                 <input type="text" id="password" placeholder="Enter Password">
                 <small>Error Message</small>
             </div>
 
-            <div class="form-contol">
+            <div class="form-control">
                 <label for="password2">Confrim Password</label>
                 <input type="text" id="password2" placeholder="Enter Password">
                 <small>Error Message</small>
