--- a/project 1/index.html
+++ b/project 1/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <!-- action is for redirected to a url - id '#' is for js
-             class '.' is for css "form#form.form"
+             class '.' is for css "form#form.form" or "#form.form"
         -->
         <form id="form" class="form">
             <h2>Sign Up</h2>
