--- a/project 1/index.html
+++ b/project 1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>HTML Form</title>
+    <title>HTML Form Validation</title>
 </head>
 <body>
     <div class="container">
@@ -38,8 +38,10 @@
                 <small>Error Message</small>
             </div>
             <button>Submit</button>
-
         </form>
+       <!--  <a href="../index.html">
+            <button class="home">Home</button>
+        </a>  -->   
     </div>
 
     <script src="script.js"></script>
