--- a/project 1/index.html
+++ b/project 1/index.html
@@ -28,22 +28,23 @@
 
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="text" id="password" placeholder="Enter Password">
+                <input type="password" id="password" placeholder="Enter Password">
                 <small>Error Message</small>
             </div>
 
             <div class="form-control">
                 <label for="password2">Confrim Password</label>
-                <input type="text" id="password2" placeholder="Enter Password">
+                <input type="password" id="password2" placeholder="Enter Password again">
                 <small>Error Message</small>
             </div>
             <button>Submit</button>
         </form>
-       <!--  <a href="../index.html">
+        
+        <a href="../index.html">
             <button class="home">Home</button>
-        </a>  -->   
-    </div>
+        </a>
 
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
