--- a/project 1/index.html
+++ b/project 1/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <!-- action is for redirected to a url - id '#' is for js
-             class '.' is for css "form#form.form" or "#form.form"
+        <!-- action is for redirected to a url - '#' is for id use in .js 
+             and '.' is for class use in .css "form#form.form" or "#form.form"
         -->
         <form id="form" class="form">
             <h2>Sign Up</h2>
